# vcs-toolkit-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  _typos.toml  content.txt  flake.nix  lychee.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nix.yml  release.yml  scheduled-cli-drift.yml  scheduled-mutants.yml
crates/cli-support/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/cli-support/src/: credentials.rs  lib.rs  logging.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/core/docs/: cookbook.md  core.md  positioning.md  process-model.md  stability.md
crates/core/examples/: prompt_line.rs  try_merge_probe.rs
crates/core/src/: dto.rs  error.rs  git_backend.rs  jj_backend.rs  lib.rs
crates/core/tests/: repo.rs
crates/core/tests/common/: mod.rs
crates/diff/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/diff/benches/: diff_parse.rs
crates/diff/src/: diff.rs  lib.rs  pathbytes.rs  version.rs
crates/forge/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/forge/docs/: forge.md
crates/forge/examples/: pr_with_ci_check.rs
crates/forge/src/: dto.rs  error.rs  gitea_forge.rs  github_forge.rs  gitlab_forge.rs  lib.rs
crates/forge/tests/: gitea_live.rs
crates/git/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/git/benches/: conflict_parse.rs  porcelain_v2.rs
crates/git/docs/: conflicts.md  git.md  security.md
crates/git/proptest-regressions/: conflict.txt
crates/git/src/: conflict.rs  lib.rs  parse.rs
crates/git/tests/: repo.rs
crates/git/tests/common/: mod.rs
crates/gitea/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/gitea/docs/: gitea.md
crates/gitea/src/: lib.rs  parse.rs
crates/gitea/tests/: cli.rs
crates/github/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/github/docs/: github.md
crates/github/src/: lib.rs  parse.rs
crates/github/tests/: cli.rs
crates/github/tests/cassettes/: release_round_trip.json  run_round_trip.json
crates/gitlab/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/gitlab/docs/: gitlab.md
crates/gitlab/src/: lib.rs  parse.rs
crates/gitlab/tests/: cli.rs
crates/jj/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/jj/benches/: conflict_parse.rs
crates/jj/docs/: jj.md
crates/jj/src/: conflict.rs  lib.rs  parse.rs
crates/jj/tests/: repo.rs
crates/jj/tests/common/: mod.rs
crates/mcp/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/mcp/docs/: mcp.md
crates/mcp/src/: forge_tools.rs  lib.rs  main.rs  output.rs  params.rs  repo_tools.rs  tests.rs  write_gate.rs
crates/mcp/tests/: mcp.rs  stdio_e2e.rs
crates/process/: CHANGELOG.md  Cargo.toml  README.md
crates/process/src/: client.rs  exec.rs  lib.rs  linux.rs  other.rs  runner.rs  stream.rs  windows.rs
crates/process/tests/: job.rs
crates/testkit/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/testkit/docs/: testing.md  testkit.md
crates/testkit/src/: lib.rs
crates/watch/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/watch/docs/: watch.md
crates/watch/src/: error.rs  event.rs  lib.rs
crates/watch/tests/: error_api.rs  feature_graph.rs  watch.rs
decisions/: README.md  keep-bindable.md  wont-do-2026-06.md
docs/: README.md  audit-2026-07.md  command-index.md  conflicts.md  cookbook.md  core.md  extending.md  forge.md  git.md  gitea.md  github.md  jj.md  process-model.md  security.md  stability.md  testing.md  testkit.md  watch.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: diff_parse.rs  git_porcelain_v2.rs
ideas/: README.md  later-new-backends.md  later-upstream-gated.md  later-watch-gitignore.md  next-examples-and-publishing.md  next-forge-fields.md  next-forge-surface.md  next-mcp-http-transport.md
scripts/: bench  docs-health  docs-health.sh  gate
scripts/release/: lib.sh  lib.test.sh
