[workspace]
resolver = "3"
members = [
    "crates/diff",
    "crates/cli-support",
    "crates/git",
    "crates/jj",
    "crates/github",
    "crates/gitlab",
    "crates/gitea",
    "crates/forge",
    "crates/core",
    "crates/testkit",
    "crates/watch",
    "crates/mcp",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libFuzzer); excluded so it never
# touches the stable build, MSRV, or the CI gate. Run it manually — see
# fuzz/README.md.
exclude = ["fuzz"]

# Metadata shared by every crate in the toolkit. Each crate inherits these via
# `field.workspace = true` in its own Cargo.toml. NOTE: `version` is *not* here
# on purpose — the three crates publish independently and carry their own
# version (see each crate's [package]).
[workspace.package]
edition = "2024"
# Minimum supported Rust: edition 2024 needs 1.85, but the wrappers use
# let-chains (stabilised in 1.88), so 1.88 is the real floor. Declared here (and
# inherited via `rust-version.workspace = true`) so the contract is machine-checked
# — `cargo build` on an older toolchain fails early with a clear message.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/ZelAnton/vcs-toolkit-rs"
authors = ["Anton Zhelezniakou"]

# ---------------------------------------------------------------------------
# Workspace dependencies
#
# Convention (see AGENTS.md "Dependency management"): this workspace fixes NO
# allow-list of crates. Declare a dependency here once and reference it from a
# member with `<crate>.workspace = true` when more than one crate needs it.
# Give every entry an inline comment explaining *why* it's here. Pin major
# versions, enable only the features used, and keep Cargo.lock committed.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# External job-backed process launcher (Windows Job Object / Linux cgroup v2, so a
# git/jj/gh subprocess tree dies on close), with the `CliClient` core, the
# `cli_client!` macro, structured `Error`, and the `ScriptedRunner`/`RecordingRunner`
# test seams the wrappers build on (under `processkit::testing`). Was the internal
# `vcs-process` crate; now the published `processkit`. Pin `"2.1"`: the 2.x line is
# semver-stable, so the caret spans future 2.x releases and `cargo update` pulls them
# safely. `Cargo.lock` resolves 2.2.1, which keeps the 2.1.1 `Error` constructors
# (`Error::spawn`/`not_found`/`stdin`/`parse`) and also picks up the Windows
# `ProcessGroup::{suspend, resume}` pid-recycle race fix plus `wait_for`/`wait_for_port`
# draining piped stdout/stderr instead of risking pipe-buffer deadlock; those matter
# because `vcs-watch` manages job-object/process-group lifecycles. Reading a variant's
# fields still goes through a `{ .. }` pattern (non-exhaustive patterns stay legal) or
# the accessor API (`program()`, `stdout()`, `stderr()`, `code()`, `is_timeout()`, …). The mechanical
# rename table from `docs/migrating-1.2-to-2.1.md` (`terminate_all`→`kill_all`,
# `avg_cpu`→`avg_cpu_cores`, `memory_max`→`max_memory`, `Error::OutputTooLarge`'s
# `line_limit`/`byte_limit`→`max_lines`/`max_bytes`, `processkit::{Encoding,StreamExt}`→
# `processkit::prelude::…`) hits no call site in this workspace (verified by rg).
processkit = "2.1"

# ---------------------------------------------------------------------------
# Workspace lints — inherited by every crate via `[lints] workspace = true`.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
# Teach the compiler the `docsrs` cfg: docs.rs (and our nightly doc build) pass
# `--cfg docsrs` via each crate's `rustdoc-args` to switch on the `#[doc(cfg(...))]`
# "Available on crate feature `x`" badges; without this, `cfg(docsrs)` would warn
# as an unexpected cfg under `-D warnings`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
