[package]
name = "vcs-cli-support"
version = "0.1.0"
description = "Shared plumbing for CLI-wrapping crates: an argv injection guard, retry policies (fetch + lock contention) with a retrying client, and processkit error classifiers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cli","subprocess","retry","error","vcs"]
categories = ["development-tools","command-line-utilities"]

[dependencies]
# The structured error these helpers guard against / classify, and the program
# launcher the wrappers share — and `RetryingClient`, the `CliClient` the wrappers
# hold. This is why this plumbing lives here and not in the std-only `vcs-diff`.
processkit.workspace = true
# Dyn-compatible async trait for `CredentialProvider` — matches processkit's own
# `ProcessRunner` pattern, so `Arc<dyn CredentialProvider>` works on our MSRV.
async-trait = "0.1"
# The async backoff sleep in `retry_async` (the `RetryingClient` retry loop). Only
# the time driver is needed; the wrappers already run on tokio.
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
# `#[tokio::test]` for the async `retry_async` / `RetryingClient` tests.
tokio = { version = "1", features = ["macros", "rt", "time"] }

[package.metadata.docs.rs]
# Build docs.rs with every feature and pass `--cfg docsrs` so any feature-gated
# item renders an "Available on feature `x`" badge. (This crate has no features of
# its own — cancellation is now core in processkit 0.10 — but the metadata stays
# uniform with the rest of the workspace.)
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
