[package]
name = "vcs-forge"
version = "0.5.1"
description = "One async Rust API over GitHub, GitLab, and Gitea: unified pull/merge requests, issues, and releases across the gh, glab, and tea CLIs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["forge","github","gitlab","gitea","pull-request"]
categories = ["command-line-utilities","api-bindings","asynchronous"]

[dependencies]
# The `ProcessRunner` seam (so a fake runner can drive the wrapped clients in
# tests) and the structured `Error` the wrappers return.
processkit.workspace = true
# The transient-fetch-error classifier reused by the facade `Error`.
vcs-cli-support = { path = "../cli-support", version = "0.5" }
# The three forge wrappers this facade dispatches across.
# NOTE: `github_forge` now reads `PullRequest::is_draft`, added after vcs-github
# 0.8.0 — so vcs-github's NEXT release must be >= minor and this floor raised to
# match (>= "0.9"), or a published vcs-forge would resolve an older vcs-github
# without the field. (An `all` release via `cargo set-version` bumps this in step;
# the reminder guards a github-only release.)
vcs-github = { path = "../github", version = "0.9" }
vcs-gitlab = { path = "../gitlab", version = "0.5" }
vcs-gitea = { path = "../gitea", version = "0.5" }
# `async fn` in the object-safe `ForgeApi` trait (dyn-friendly).
async-trait = "0.1"
# Optional: derive `Serialize` on the unified DTOs behind the `serde` feature
# (off by default). Turned on by JSON consumers such as `vcs-mcp`.
serde = { version = "1", features = ["derive"], optional = true }

[features]
# Emit a `tracing` event per command run (forwards to each wrapper's `tracing`).
tracing = ["vcs-github/tracing", "vcs-gitlab/tracing", "vcs-gitea/tracing"]
# Add `#[derive(Serialize)]` to the unified DTOs (`ForgePr`, `ForgeRepo`, …).
serde = ["dep:serde"]

[dev-dependencies]
# `#[tokio::test]` for the async dispatch tests.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Exercise the `serde` feature's derives (used only by the feature-gated test).
serde_json = "1"
# Property-based fuzzing of the pure mappers (`from_remote_url` panic-freedom +
# lookalike rejection, PR-state mapping). Stable Rust, dev-only.
proptest = "1"

[package.metadata.docs.rs]
# Build docs.rs with every feature so the optional surfaces (mock / tracing /
# serde / stream) are documented (defaults alone hide them), and pass
# `--cfg docsrs` so feature-gated items render an "Available on feature `x`" badge.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
