[package]
name = "vcs-github"
version = "0.11.0"
description = "Automate GitHub from Rust: a typed, async wrapper for the GitHub CLI (gh) — pull requests, issues, releases, and CI checks."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["github","gh","pull-request","cli","async"]
categories = ["command-line-utilities","api-bindings","asynchronous"]

[dependencies]
# Runs `gh` inside an OS job (Windows Job Object / Linux cgroup) so the process
# tree is killed on close — no orphaned subprocesses. Also the `ProcessRunner`
# seam, `CliClient` core, and structured `Error`.
processkit.workspace = true
# Shared processkit-coupled plumbing: the argv injection guard (`reject_flag_like`).
# features=["serde"]: shared JSON helpers (json::null_to_empty/from_json) live in cli-support behind that feature — added after cli-support 0.2.0, so its NEXT release must be >= minor and this floor raised to match.
vcs-cli-support = { path = "../cli-support", version = "0.7", features = ["serde"] }
# Shared git-format unified-diff model + parser (`gh pr diff` emits the same
# format `git diff`/`jj diff --git` do, so `pr_diff` parses through the shared
# parser rather than duplicating it). Re-exported below (`vcs_github::FileDiff`,
# …) so a consumer depending only on vcs-github needn't add vcs-diff directly.
vcs-diff = { path = "../diff", version = "0.7" }
# Deserialize `gh … --json` output into typed structs (PullRequest/Issue/RepoView).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `async fn` in the object-safe `GitHubApi` trait (dyn + mockall friendly).
async-trait = "0.1"
# Auto-generated `MockGitHubApi` for consumers' tests. Test-only — enabled only
# via the `mock` feature, never compiled into production builds.
mockall = { workspace = true, optional = true }

[features]
# Expose the `mockall`-generated `MockGitHubApi` (and pull in processkit's mocks).
mock = ["dep:mockall", "processkit/mock"]
# Emit a `tracing` event per command run (forwards to processkit's `tracing`).
tracing = ["processkit/tracing"]

[dev-dependencies]
# `#[tokio::test]` for the async unit/integration tests; `time` + `test-util`
# back the paused-clock cancellation test (`start_paused`, `time::timeout`).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
# `processkit::testing::RecordReplayRunner` — record/replay cassettes for a
# handful of `gh` parser fixtures (crates/github/tests/cassettes/), replayed
# hermetically by `cargo test -p vcs-github`. Listed only here (not in
# `[dependencies]`), so the `record` feature — and the `serde`/`serde_json`
# deps it pulls in on top of processkit's own — is scoped to this crate's
# dev/test profile and never reaches its published library build or any other
# workspace crate. See CONTRIBUTING.md, "Updating a `gh` CLI cassette", for
# the re-recording procedure.
processkit = { workspace = true, features = ["record"] }

[package.metadata.docs.rs]
# Build docs.rs with every feature so the optional surfaces (mock / tracing /
# serde / stream) are documented (defaults alone hide them), and pass
# `--cfg docsrs` so feature-gated items render an "Available on feature `x`" badge.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
